add_executable(l5kalmanFilterEqVid6 l5kalmanFilterEqVid6.cpp)
add_executable(l5kalmanFilterEqVid18 l5kalmanFilterEqVid18.cpp)
add_executable(l5kalmanFilterEqVid22 l5kalmanFilterEqVid22.cpp)
add_executable(tests tests.cpp)
include_directories(./)
add_executable(l5kalmanFilterEqVid12 l5kalmanFilterEqVid12.cpp tracking.cpp kalman_filter.h kalman_filter.cpp)
add_executable(l7ukf_v14 l7ukf_v14.cpp ukf.cpp ukf.h)
add_executable(l7ukf_v17 l7ukf_v17.cpp ukf17.cpp ukf17.h)
add_executable(l7ukf_v20 l7ukf_v20.cpp ukf20.cpp ukf20.h)
add_executable(l7ukf_v23 l7ukf_v23.cpp ukf23.cpp ukf23.h)
add_executable(l7ukf_v26 l7ukf_v26.cpp ukf26.cpp ukf26.h)
